Update Home, Header, Footer et creation ModuleIPV6

--- a/src/Footer.html
+++ b/src/Footer.html
@@ -1,5 +1,5 @@
-<footer class="header text-center fixed-bottom p-1">
+<footer class="header text-center fixed-bottom">
     <div class="container">
-        <small>&copy; 2023 Les boss. Tout droits réservés.</small>
+        <small>&copy; 2023 Les boss. Tous droits réservés.</small>
     </div>
 </footer>
