--- a/src/Header.html
+++ b/src/Header.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col" style="display: flex; align-items: center;">
-                <svg width="3.5em" viewBox="0 0 1024 1024" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M511.3 676.9m-10 0a10 10 0 1 0 20 0 10 10 0 1 0-20 0Z" fill="#FFFFFFFFFFF"></path><path d="M960 756V138.5H64V756h320.1v85.5H256.2v44h511.9v-44h-128V756H960zM108 182.5h808v427.1H108V182.5z m488.1 659h-168V756h168v85.5zM108 712v-82.5h808V712H108z" fill="#FFFFFF"></path><path d="M167.536 327.703l90.72-90.721 14.143 14.142-90.721 90.72zM172.959 423.469l181.159-181.16 14.142 14.143L187.1 437.61z" fill="#FFFFFFFFFFF"></path></g></svg>
+                <svg width="3.5em" viewBox="0 0 1024 1024" class="icon" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M511.3 676.9m-10 0a10 10 0 1 0 20 0 10 10 0 1 0-20 0Z" fill="#FFFFFFFFFFF"></path><path d="M960 756V138.5H64V756h320.1v85.5H256.2v44h511.9v-44h-128V756H960zM108 182.5h808v427.1H108V182.5z m488.1 659h-168V756h168v85.5zM108 712v-82.5h808V712H108z" fill="#FFFFFF"></path><path d="M167.536 327.703l90.72-90.721 14.143 14.142-90.721 90.72zM172.959 423.469l181.159-181.16 14.142 14.143L187.1 437.61z" fill="#FFFFFFFFFFF"></path></g></svg>
                 <a class="navbar-brand" href="Home.php"><h2 style="margin-left: 10px; text-align: center;">SAE des bosssssss</h2></a>
             </div>
         </div>
@@ -11,6 +11,7 @@
     <div>
         <nav class="navbar navbar-expand-lg navbar-light p-0">
             <div class="container-fluid">
+                <!-- mettre en blanc est trais -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon text-light"></span>
                 </button>
@@ -29,7 +30,7 @@
                                 <li><a class="dropdown-item" href="#">Module 1 : Ping</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Module 2 : IPV4</a></li>
-                                <li><a class="dropdown-item" href="ModulesIPV6.php">Module 3 : IPV6</a></li>
+                                <li><a class="dropdown-item" href="ModuleIPV6.php">Module 3 : IPV6</a></li>
                             </ul>
                         </li>
                     </ul>
