ajout du module ping au header

--- a/src/Header.html
+++ b/src/Header.html
@@ -29,6 +29,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Module 1 : Ping</a></li>
                                 <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="Module_ping.php">Module 1 : ping</a></li>
                                 <li><a class="dropdown-item" href="Module_IPV4.php">Module 2 : IPV4</a></li>
                                 <li><a class="dropdown-item" href="Module_IPV6.php">Module 3 : IPV6</a></li>
                             </ul>
