--- a/src/Footer.html
+++ b/src/Footer.html
@@ -1,4 +1,4 @@
-<footer class="header text-center fixed-bottom">
+<footer class="header" style="position: absolute; right: 0; bottom: 0; padding: 0.5em;">
     <div class="container">
         <small>&copy; 2023 Les boss. Tous droits réservés.</small>
     </div>
