--- a/src/Header.html
+++ b/src/Header.html
@@ -27,9 +27,8 @@
                                 <strong>Modules</strong>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Module 1 : Ping</a></li>
+                                <li><a class="dropdown-item" href="Module_ping.php">Module 1 : Ping</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="Module_ping.php">Module 1 : ping</a></li>
                                 <li><a class="dropdown-item" href="Module_IPV4.php">Module 2 : IPV4</a></li>
                                 <li><a class="dropdown-item" href="Module_IPV6.php">Module 3 : IPV6</a></li>
                             </ul>
