Améloration du formulaire IPV4

--- a/src/Footer.html
+++ b/src/Footer.html
@@ -1,4 +1,4 @@
-<footer class="header" style="position: absolute; right: 0; bottom: 0; padding: 0.5em;">
+<footer class="header fixed-bottom text-center">
     <div class="container">
         <small>&copy; 2023 Les boss. Tous droits réservés.</small>
     </div>
