Changement de nom fichier home vers index

--- a/src/Header.html
+++ b/src/Header.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col" style="display: flex; align-items: center;">
                 <svg width="3.5em" viewBox="0 0 1024 1024" class="icon" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M511.3 676.9m-10 0a10 10 0 1 0 20 0 10 10 0 1 0-20 0Z" fill="#FFFFFFFFFFF"></path><path d="M960 756V138.5H64V756h320.1v85.5H256.2v44h511.9v-44h-128V756H960zM108 182.5h808v427.1H108V182.5z m488.1 659h-168V756h168v85.5zM108 712v-82.5h808V712H108z" fill="#FFFFFF"></path><path d="M167.536 327.703l90.72-90.721 14.143 14.142-90.721 90.72zM172.959 423.469l181.159-181.16 14.142 14.143L187.1 437.61z" fill="#FFFFFFFFFFF"></path></g></svg>
-                <a class="navbar-brand" href="Home.php"><h1 style="margin-left: 10px; text-align: center;">SAE des bosssss</h1></a>
+                <a class="navbar-brand" href="Index.php"><h1 style="margin-left: 10px; text-align: center;">SAE des bosssss</h1></a>
             </div>
         </div>
     </div>
@@ -18,7 +18,7 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="Home.php">
+                            <a class="nav-link active text-white" aria-current="page" href="Index.php">
                                 <strong>Accueil</strong>
                             </a>
                         </li>
