refactor du index.php

--- a/src/Footer.html
+++ b/src/Footer.html
@@ -1,5 +1,5 @@
 <footer class="header fixed-bottom text-center">
     <div class="container">
-        <small>&copy; 2023 Les boss. Tous droits réservés.</small>
+        <small>&copy; 2023 Les bosssss. Tous droits réservés.</small>
     </div>
 </footer>
