--- a/src/Header.html
+++ b/src/Header.html
@@ -18,7 +18,7 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="Index.php">
+                            <a class="nav-link active text-white" aria-current="page" href="index.php">
                                 <strong>Accueil</strong>
                             </a>
                         </li>
